Add html and style for information section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="container">
 
                     <h1 class="hero-text">This website is awesome</h1>
-                    
+
                     <p class="hero-sub">This website has some subtext that goes here under the main title.
                         It's a smaller font and the color is lower contrast.</p>
 
@@ -42,7 +42,56 @@
                 <div class="image"> this is a placeholder for an image</div>
             </div>
         </div>
+
     </div>
+
+    <div class="main">
+
+        <div class="mid-section">
+            <h2 class="sub-title">Some random information.</h2>
+
+            <div class="sub-container">
+                <div class="profile">
+                    <div class="image-container">
+
+                    </div>
+
+                    <p class="profile-text">
+                        This is some subtext under and illustration or image
+                    </p>
+                </div>
+                <div class="profile">
+                    <div class="image-container">
+
+                    </div>
+
+                    <p class="profile-text">
+                        This is some subtext under and illustration or image
+                    </p>
+                </div>
+                <div class="profile">
+                    <div class="image-container">
+
+                    </div>
+
+                    <p class="profile-text">
+                        This is some subtext under and illustration or image
+                    </p>
+                </div>
+
+                <div class="profile">
+                    <div class="image-container">
+
+                    </div>
+
+                    <p class="profile-text">
+                        This is some subtext under and illustration or image
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 </body>
 
