--- a/index.html
+++ b/index.html
@@ -92,6 +92,21 @@
         </div>
     </div>
 
+    <div class="main quote-main">
+        <div class="sub-container">
+            <div class="quote-container">
+
+                <p class="quote">
+                    This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or
+                    maybe
+                    people will actually read it. Who knows? All I know is that it looks nice.
+                </p>
+                <h2 class="quotee">
+                    -Thor, God of Thunder
+                </h2>
+            </div>
+        </div>
+    </div>
 
 </body>
 
