Add style and html for call to action section

--- a/index.html
+++ b/index.html
@@ -108,6 +108,20 @@
         </div>
     </div>
 
+    <div class="main">
+        <div class="sub-container call-action">
+            <div class="call">
+                <div class="call-sub">
+                    <h2 class="call-text">Call to action! It's time!</h2>
+                    <p class="call-sub-text">Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <div class="call-button">
+                    <button class="sign-up">sign-up</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
