Add foot html and styling

--- a/index.html
+++ b/index.html
@@ -122,6 +122,16 @@
         </div>
     </div>
 
+    <div class="footer-main">
+        <div class="main">
+            <div class="footer">
+                <p class="footer-text">
+                    copy The odin Project 2025
+                </p>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
